--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <a href=""><i class="fa-brands fa-telegram"></i></a>
     </nav>
   </footer>
+  <script src="scripts/index.js"></script>
 </body>
 
 </html>
