--- a/index.html
+++ b/index.html
@@ -7,25 +7,19 @@
   <title>Милые котики</title>
   <script src="https://kit.fontawesome.com/3e2b3d0dcf.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
+  <script src="scripts/cats.js"></script>
 </head>
 
 <body>
   <header>
-    <a href="" class="logo"><i class="fa-regular fa-cat"></i> Милые котики</a>
+    <a href="" class="logo"><i class="fa-solid fa-paw fa-2x"></i> Милые котики</a>
     <a class="btn" href="" id="add"><i class="fa-regular fa-plus"></i></a>
   </header>
   <main>
-    <div class="card">Name</div>
-    <div class="card">Name</div>
-    <div class="card">Name</div>
-    <div class="card">Name</div>
-    <div class="card">Name</div>
-    <div class="card">Name</div>
-    <div class="card">Name</div>
-    <div class="card">Name</div>
+    
   </main>
   <footer>
-    <span>©2022 Made by Name</span>
+    <span>©2022 Made by Medmixal</span>
     <nav>
       <a href=""><i class="fa-brands fa-github"></i></a>
       <a href=""><i class="fa-brands fa-vk"></i></a>
