--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="https://kit.fontawesome.com/3e2b3d0dcf.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
   <script src="scripts/cats.js"></script>
+  <script src="scripts/api.js"></script>
 </head>
 
 <body>
