--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <header>
     <a href="" class="logo"><i class="fa-solid fa-paw fa-2x"></i> Милые котики</a>
     <a class="btn" href="" id="add"><i class="fa-regular fa-plus"></i></a>
+    <a class="btn" href="" id="login"><i class="fa-solid fa-right-to-bracket"></i></a>
   </header>
   <main>
 
@@ -42,6 +43,25 @@
         <input type="text" name="img_link" placeholder="Ссылка на фото">
         <button type="submit">Добавить котика</button>
       </form>
+    </div>
+  </div>
+  <div class="popup-wrapper">
+    <div class="popup-login" id="popup-login">
+      <div class="popup-close btn"><i class="fa-solid fa-xmark"></i></div>
+      <h2>Авторизация</h2>
+      <form class="form-login">
+        <p class="clearfix">
+            <label for="login">Введите логин</label>
+            <input type="text" name="login" id="loginField" placeholder="Логин">
+        </p>
+        <p class="clearfix">
+            <label for="password">Введите пароль</label>
+            <input type="password" name="password" id="password" placeholder="Пароль">
+        </p>
+        <p class="clearfix">
+          <button type="submit">Войти</button>
+        </p>      
+    </form>
     </div>
   </div>
   <script src="scripts/index.js"></script>
