make send cookies

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
       <form class="form-login">
         <p class="clearfix">
             <label for="login">Введите логин</label>
-            <input type="text" name="login" id="loginField" placeholder="Логин">
+            <input type="text" name="login" id="username" placeholder="Логин">
         </p>
         <p class="clearfix">
             <label for="password">Введите пароль</label>
             <input type="password" name="password" id="password" placeholder="Пароль">
         </p>
         <p class="clearfix">
-          <button type="submit">Войти</button>
+          <button type="submit" id="loginBtn">Войти</button>
         </p>      
     </form>
     </div>
