--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
     </form>
     </div>
   </div>
+
+  <div class="popup-wrapper">
+    <div class="popup" id="popup-card">
+      
+        
+    </div>
+  </div>
+
   <script src="scripts/index.js"></script>
 </body>
 
