make popup infocard

--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
   </div>
 
   <div class="popup-wrapper">
-    <div class="popup" id="popup-card">
-      
-        
+    <div class="popup popup__info-card" id="popup-card">
     </div>
   </div>
 
